[project]
name = "info539-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.2",
    "huggingface-hub>=0.30.2",
    "llama-cpp-python>=0.3.8",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.12.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
